[GStreamer] Media player does not properly inhibit, uninhibit sleep https://bugs.webkit.org/show_bug.cgi?id=186971

Reviewed by Philippe Normand.

* platform/graphics/gstreamer/mse/MediaPlayerPrivateGStreamerMSE.cpp:
(WebCore::MediaPlayerPrivateGStreamerMSE::updateStates): Call the
player to update the playback state as it is done in the regular
player.


Canonical link: https://commits.webkit.org/231944@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270235 268f45cc-cd09-0410-ab3c-d52691b4dbfc